# Ethiopic-keyboard

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build-run.sh  build-tsf.sh  plan_ethiopic-keyboard.md  session-ses_2258.md  session-ses_22ac.md  session-ses_22e6.md  session-ses_22f5.md  session-ses_2306.md  session-ses_65f5.md
build-ibus/: CMakeCache.txt  Makefile  cmake_install.cmake  ibus-engine-ethiopic
build-ibus-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_engine  test_ibus_engine  test_mapping
build-ibus-test/libethio/: Makefile  cmake_install.cmake
build-ibus/libethio/: Makefile  cmake_install.cmake
data/amharic/: am-sera-v1.json  am-sera-v2.json  am-sera.json  am-sera_modified.mim  bigrams.json  generate_reference.py  names.json  rebuild_sera.py  reconstruct_sera.py  sera-edit.json  sera-reference.txt  sera.json  simulate_sera.py  test_ambiguities.py  unicode-ethiopic.txt  validate_sera.py  wordlist.json
docs/: am_ET.UTF-8-compose.txt  ethio-am-sera-reference.txt  m17n-am-sera.mim  windows-tsf-plan.md
ibus-ethiopic/: CMakeLists.txt
ibus-ethiopic/data/: default.xml  ethiopic.xml  ethiopic.xml.in  org.freedesktop.IBus.Ethiopic.xml  org.freedesktop.IBus.Ethiopic.xml.in
ibus-ethiopic/src/: engine.cpp  engine.h  main.cpp
install/libexec/: ibus-engine-ethiopic
install/share/ibus-ethiopic/: default.xml
install/share/ibus-ethiopic/amharic/: am-sera.json  bigrams.json  names.json  wordlist.json
install/share/ibus/component/: ethiopic.xml
libethio/: CMakeLists.txt
libethio/include/ethio/: engine.h  json.hpp  logger.h  mapping.h  wordlist.h
libethio/src/: engine.cpp  logger.cpp  mapping.cpp  wordlist.cpp
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  ibus-ethiopic.install  libethio-dev.install  rules
packaging/fedora/: ibus-ethiopic.spec
python-helper/: convert_mim_to_json.py  do_focus_out.py  generate_reference.py  simulate_sera.py  test_ambiguities.py  validate_sera.py
tests/: CMakeLists.txt  test_engine.cpp  test_features.cpp  test_ibus_engine.cpp  test_mapping.cpp  test_tsf_engine.cpp  test_wordlist.cpp
win-tests/: CMakeLists.txt
windows/: build-msi.bat  install.ps1  installer.nsi  txt2rtf.ps1
windows/ethiopic-tsf/: CMakeLists.txt  README.md  dllmain.cpp  engine.cpp  engine.h  ethiopic-tsf.def
windows/wix/: license.rtf  product.wxs
